--- a/shiyan5-style.css
+++ b/shiyan5-style.css
@@ -302,7 +302,7 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	text-rendering: optimizeLegibility;
 	color: #444;
-	background:url(http://superchaoinfo.qiniudn.com/5-1206010S327-51.gif) repeat #efefef;
+	background:url(http://7b1fi3.com1.z0.glb.clouddn.com/QQ截图20150801230002.jpg) repeat #efefef;
 	background-attachment: fixed;
 }
 body.custom-font-enabled {
