--- a/shiyan8-style.css
+++ b/shiyan8-style.css
@@ -1189,3 +1189,10 @@ div.wumii-related-items-div div a {
 font-size: 0px !important;
 padding: 0;
 }
+
+
+
+#ds-thread .ds-powered-by a { 
+font-size: 0px !important; 
+padding: 0; 
+}
