--- a/2018.10.15daiti7niu.css
+++ b/2018.10.15daiti7niu.css
@@ -1,4 +1,4 @@
-<![CDATA[/*
+/*
 -----------------------------------------------
 Template Name  : Frontier
 Author         : NewBloggerThemes.com
@@ -1156,4 +1156,3 @@ h2.date-header{margin:10px 0;display:none;}
 .bjqs-slide a, .bjqs-slide img {height: 100%; width: 100%;}
 .CSS_LIGHTBOX{z-index:1000 !important;}
 
-]]>
