--- a/shiyan6-style.css
+++ b/shiyan6-style.css
@@ -302,7 +302,7 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	text-rendering: optimizeLegibility;
 	color: #444;
-	background:url(http://superchaoinfo.qiniudn.com/t01014b760c3abf5ac3.jpg) repeat #efefef;
+	background:url(http://wx3.sinaimg.cn/mw690/0060lm7Tly1fw8xyq4b9xj311b0ov7c6.jpg) repeat #efefef;
 	background-attachment: fixed;
 }
 body.custom-font-enabled {
